--- a/src/ShopBundle/Resources/views/Default/index.html.twig
+++ b/src/ShopBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
 
 {% block javascripts %}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArq7yenCMmQNQp3T2U51xbfmKBHxRhaLw">
