--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2,3 +2,16 @@
     width : 100vw;
     height: 300px;
 }
+
+#contentMap {
+    height : 60px;
+    margin:3px;
+}
+#contentMap img {
+    height: 60px;
+}
+
+#map .gm-style-iw {
+
+    top: 20px !important;
+}
